# backend-server/docs/swagger.yaml
@@ -66,48 +66,20 @@ definitions:
     type: object
   handler.LoginByEmailRequest:
     properties:
-      captchaCode:
-        description: 图形验证码值
-        type: string
-      captchaId:
-        description: 图形验证码 ID
-        type: string
       code:
         type: string
       email:
         type: string
-      points:
-        description: 点选验证码坐标
-        items:
-          $ref: '#/definitions/captcha.Point'
-        type: array
-      startTime:
-        description: 验证码生成时间（毫秒）
-        type: integer
     required:
     - code
     - email
     type: object
   handler.LoginByPhoneRequest:
     properties:
-      captchaCode:
-        description: 图形验证码值
-        type: string
-      captchaId:
-        description: 图形验证码 ID
-        type: string
       code:
         type: string
       phone:
         type: string
-      points:
-        description: 点选验证码坐标
-        items:
-          $ref: '#/definitions/captcha.Point'
-        type: array
-      startTime:
-        description: 验证码生成时间（毫秒）
-        type: integer
     required:
     - code
     - phone
